--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       </div>
     </section>
     <footer>
-      <p>Claudiu Web Design, Copyright &copy; 2019</p>
+      <p>Claudiu Web Designer, Copyright &copy; 2019</p>
+      
 
     </footer>
 
